# cortex-agent

./: .gitignore  AGENTS.md  DEPENDENCIES.md  GEMINI_TEMPLATE.md  INSTALL.en.md  INSTALL.md  README.en.md  README.md  benchmark_indexer.py  clean_mcp.py  generate_kuzu_viz.py  pyproject.toml  requirements.txt  settings.yaml  setup.sh  test_recursive.py  update_capsule.py  update_db_path.py  update_indexer.py  update_memory.py
.github/workflows/: ci.yml
.jules/: bolt.md
cortex_data/: skills_meta.json
hooks/: after_edit.py  after_save_observation.py  before_tool_call.py
knowledge/skills/00-andruia-consultant/: skill.md
knowledge/skills/007/: skill.md
knowledge/skills/10-andruia-skill-smith/: skill.md
knowledge/skills/20-andruia-niche-intelligence/: skill.md
knowledge/skills/3d-web-experience/: skill.md
knowledge/skills/ab-test-setup/: skill.md
knowledge/skills/acceptance-orchestrator/: skill.md
knowledge/skills/accessibility-compliance-accessibility-audit/: skill.md
knowledge/skills/active-directory-attacks/: skill.md
knowledge/skills/activecampaign-automation/: skill.md
knowledge/skills/address-github-comments/: skill.md
knowledge/skills/advanced-evaluation/: skill.md
knowledge/skills/advogado-criminal/: skill.md
knowledge/skills/advogado-especialista/: skill.md
knowledge/skills/agent-evaluation/: skill.md
knowledge/skills/agent-framework-azure-ai-py/: skill.md
knowledge/skills/agent-manager-skill/: skill.md
knowledge/skills/agent-memory-mcp/: skill.md
knowledge/skills/agent-memory-systems/: skill.md
knowledge/skills/agent-orchestration-improve-agent/: skill.md
rules/: diagnostics.md  enforcement.md  relay.md  rule.md
rules/core/: architecture.md  diagnostics.md  governance.md  indexing_policy.md  learning.md
scripts/: backup.sh  cortex_mcp.py  generate_kuzu_viz.py  jules_mcp.py  relay.py  test_concurrency.py
scripts/cortex/: capsule.py  cortex_ctl.py  db.py  edit_engine.py  extract_inbox.py  git_analyzer.py  graph_db.py  hooks_manager.py  impact.py  indexer.py  indexer_utils.py  logger.py  orchestrator.py  paths.py  persistent_memory.py  search_engine.py  skeleton.py  skill_manager.py  vector_engine.py  vector_engine_server.py  vectorizer.py  visualizer.py  watcher.py
scripts/diagnostics/: zombie-check.ps1  zombie-check.sh
tasks/: 로드.md  백업.md  지식화.md
templates/: .env.example  CLAUDE_TEMPLATE.md  GEMINI_TEMPLATE.md  GLOBAL_RULE_MD_TEMPLATE.md  settings.local.yaml.example
templates/ignores/: .cursorignore
tests/: benchmark_indexer.py  benchmark_skill_manager.py  test_db.py  test_indexer.py  test_jules_mcp.py  test_skeleton.py  test_vector_engine.py
(+1349 files in other folders)
