[project]
name = "cortex-agent"
version = "0.1.0"
description = "Cortex MCP Agent — Semantic Code Intelligence Engine"
requires-python = "==3.12.*"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.2",
    "kuzu>=0.11.3",
    "torch==2.5.1",
    "openai>=1.0.0",
    "tqdm>=4.66.0",
    "pypdf>=3.0.0",
    "watchdog>=3.0.0",
    # Cross-platform OS abstraction (fcntl/pgrep 대체)
    "portalocker>=2.8.0",
    "psutil>=5.9.0",
    # MCP Server
    "mcp>=1.0.0",
    # Tree-sitter parsers
    "tree-sitter>=0.24.0",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
cortex-index = "cortex.indexing.cli:main"
cortex-eval = "cortex.eval.__main__:main"
cortex-mcp = "cortex.mcp.server:main"
cortex-ctl = "cortex.runtime.cli:main"
cortex-codex-hook = "cortex.integrations.codex_hook:main"
cortex-codex-session-start = "cortex.integrations.codex_session_start:main"

[project.optional-dependencies]
gpu-accel = [
    # Linux 전용 optional extra — 기본 설치/평가 실행에서는 설치하지 않는다.
    "flash-attn==2.8.3 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["cortex*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
